codepattern/c/ca/log.gcc-all/ca-02147.stderr
src/ca-02147.c:5:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char **argv)
             ^
src/ca-02147.c:5:27: warning: unused parameter 'argv' [-Wunused-parameter]
int main(int argc, char **argv)
                          ^
src/ca-02147.c:11:5: error: conflicting types for 'sample'
int sample(const char *s)
    ^
src/ca-02147.c:3:5: note: previous declaration is here
int sample(char *s);
    ^
2 warnings and 1 error generated.
